fix: fix image alignment

--- a/frontend/src/entities/photoSlider/libr/photoSlider.scss
+++ b/frontend/src/entities/photoSlider/libr/photoSlider.scss
@@ -12,11 +12,16 @@
             position: absolute;
             top: 0;
             z-index: 4;
-            max-width: 100%;
             height: 70vh;
             margin: 0 auto;
             object-fit: cover;
             cursor: pointer;
+        }
+        .vertical {
+            max-width: 100%;
+        }
+        .horizontal {
+            width: 100%;
         }
         .blur-left,
         .blur-right {
